--- a/app/views/deals/_body_stores.html.erb
+++ b/app/views/deals/_body_stores.html.erb
@@ -1,97 +1,295 @@
 <div class="st_warp">
- <div class="st_top clearfix">
-  <div class="st_left clearfix">
-    
-    <h2>LEFT DEALS & SALES</h2>
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
+
+ <div class="st_top_warp clearfix">
+
+   <div class="st_top clearfix">
+    <div class="st_left clearfix">
+      
+      <h2>LEFT DEALS & SALES</h2>
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p><em class="st_title">Ann Taylor</em> |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+      <div class="more_btn"><p>SEE MORE</p></div>
+
+    </div>
+
+    <div class="st_right clarfix">
+      
+      <h2>RIGHT DEALS & SALES</h2>
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+      <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+       <div class="st_box clearfix">
+        <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
+        <div class="inner">
+          <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
+          <span>Extra 40%~60% off Sale Shoes</span>
+        </div>
+      </div>
+
+       <div class="more_btn"><p>SEE MORE</p></div>
+
+    </div><!--./st_right-->
+   </div><!--./st_top-->
+
+   <div class="st_top_side clearfix">
+    <div class="tab-menu-test">
+      <div class="title-tab-menu">
+        <span>Yeni</span> Telefonlar
+      </div>
+      <div class="tab-menu-wp">
+        <ul>
+          <li>SAYFA 1</li>
+          <li>SAYFA 2</li>
+          <!-- <li>SAYFA 3</li> -->
+        </ul>
+        <div class="clear"></div>
+        
+        <div class="page1">
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51Cup-aObSL._SX425_.jpg" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            <p>Extra 40%~60% off Sale Shoes</p>
+          </div>
+          <div class="tab-menu-text-alt">
+            <span><em>$100.00</em> $50.00</span>
+          </div>
+        </div>
+        
+          <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/61WN0xvzGYL._SX679_.jpg" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            GM 5 PLUS5151
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+          
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="http://www.pngmart.com/files/2/IPhone-Apple-PNG-File.png" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            IPHONE 7 ÇOK UZUN BURASI
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+        
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://www.mts.ca/file_source/mts/assets/img/wireless_devices/android/LG-G4.png" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            LG G4
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+        
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/s960x960/17492776_273952066380058_7076800302457293385_o.jpg?oh=87fa7ba82c1f58e61fb1368c915b81cf&oe=59B43043" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            DOGUKAN AKGUN
+          </div>
+          <div class="tab-menu-text-alt">
+            Yazılımcı
+          </div>
+        </div>
+          <div class="all-show">
+            See More
+          </div>
+        </div>
+        
+        <div class="page1">
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://lh4.googleusercontent.com/S6zhIoUgVeDfKh7ohBaMvtm9mDaQQolRDtXdTQfwv4zMj82rOt6IsNrNM2OszjDLOYx8OMzyM0j8yQipYVn8gxTkSYQED1kE4lEco2Tcxjg8xA5FSHRfsUd1Xq_X1Z8nw7D17RtH" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            GM 5 PLUS4124
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+        
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="http://www.pngmart.com/files/2/IPhone-Apple-PNG-File.png" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            IPHONE 7
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+        
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://www.mts.ca/file_source/mts/assets/img/wireless_devices/android/LG-G4.png" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            LG G4
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+        
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/s960x960/17492776_273952066380058_7076800302457293385_o.jpg?oh=87fa7ba82c1f58e61fb1368c915b81cf&oe=59B43043" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            DOGUKAN AKGUN
+          </div>
+          <div class="tab-menu-text-alt">
+            Yazılımcı
+          </div>
+        </div>
+           <div class="all-show">
+            Tümünü göster
+          </div>
+        </div>
+        
+        <div class="page1">
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://lh4.googleusercontent.com/S6zhIoUgVeDfKh7ohBaMvtm9mDaQQolRDtXdTQfwv4zMj82rOt6IsNrNM2OszjDLOYx8OMzyM0j8yQipYVn8gxTkSYQED1kE4lEco2Tcxjg8xA5FSHRfsUd1Xq_X1Z8nw7D17RtH" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            GM 5 PLUS511
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+        
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="http://www.pngmart.com/files/2/IPhone-Apple-PNG-File.png" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            IPHONE 7
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+        
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://www.mts.ca/file_source/mts/assets/img/wireless_devices/android/LG-G4.png" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            LG G4
+          </div>
+          <div class="tab-menu-text-alt">
+            Teknoloji Haberleri
+          </div>
+        </div>
+        
+        <div class="tab-menu-text">
+          <div class="tab-menu-img">
+            <img src="https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/s960x960/17492776_273952066380058_7076800302457293385_o.jpg?oh=87fa7ba82c1f58e61fb1368c915b81cf&oe=59B43043" alt="" />
+          </div>
+          <div class="tab-menu-text-title">
+            DOGUKAN AKGUN
+          </div>
+          <div class="tab-menu-text-alt">
+            Yazılımcı
+          </div>
+        </div>
+           <div class="all-show">
+            Tümünü göster
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
 
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
+   </div><!--./st_top_side-->
 
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
+  </div><!--./st_top_wrap-->
 
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="st_right clarfix">
-    
-    <h2>RIGHT DEALS & SALES</h2>
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
-
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
-
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
-
-    <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
-
-     <div class="st_box clearfix">
-      <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
-      <div class="inner">
-        <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
-        <span>Extra 40%~60% off Sale Shoes</span>
-      </div>
-    </div>
-
-  </div><!--./st_right-->
- </div>
-
-
+  <hr>
 
   <div class="st_middle clearfix">
     <div class="st_middle_box clearfix">
@@ -161,12 +359,45 @@
         </figcaption>
       </figure>      
 
+      <figure class="deals_card">
+        <div class="image_box">
+          <img src="https://m.media-amazon.com/images/I/81cQCLifykL._SR400,400_.jpg">
+          <div class="mark"><span>50%</span><em>OFF</em></div>
+        </div>
+        <div class="buy-now"><span><a target="_blank" href="#n">BUY NOW</a></span></div>
+        <figcaption>
+          <h3>#HashTag</h3>
+          <p>Wireless Earbuds,AIKELA TWS Bluetooth 5.0 Headphones 3500mAh with LED Charging Dock 140H Playtime 3D Stereo Sound Noise Canceling IPX7 Waterproof in-Ear Headset Earphones with Built-in Mic for Sports</p>
+          <div class="price">
+            <em>$38.47</em>$129.95
+          </div>
+          <div class="m_btn"><a href="#n">Buy Now</a></div>
+        </figcaption>
+      </figure>
+
     </div><!--./st_middle_box-->
 
+    <hr>
 
     <div class="st_middle_box clearfix">
     <h2>Walmart Deals</h2>
         
+      <figure class="deals_card">
+        <div class="image_box">
+          <img src="https://m.media-amazon.com/images/I/81cQCLifykL._SR400,400_.jpg">
+          <div class="mark"><span>50%</span><em>OFF</em></div>
+        </div>
+        <div class="buy-now"><span><a target="_blank" href="#n">BUY NOW</a></span></div>
+        <figcaption>
+          <h3>#HashTag</h3>
+          <p>Wireless Earbuds,AIKELA TWS Bluetooth 5.0 Headphones 3500mAh with LED Charging Dock 140H Playtime 3D Stereo Sound Noise Canceling IPX7 Waterproof in-Ear Headset Earphones with Built-in Mic for Sports</p>
+          <div class="price">
+            <em>$38.47</em>$129.95
+          </div>
+          <div class="m_btn"><a href="#n">Buy Now</a></div>
+        </figcaption>
+      </figure>
+
       <figure class="deals_card">
         <div class="image_box">
           <img src="https://m.media-amazon.com/images/I/81cQCLifykL._SR400,400_.jpg">
@@ -237,5 +468,19 @@
   </div><!--./st_middle-->
 
 
+</div><!--./st_wrap-->
 
-</div>
+<script type="text/javascript">
+  $(document).ready(function(){
+  $(".page1").hide();
+  $(".tab-menu-wp ul li:first").addClass("active");
+  $(".page1:first").fadeIn();
+  $(".tab-menu-wp ul li").click(function(){
+      var index = $(this).index();
+      $(".page1").hide();
+        $(".tab-menu-wp ul li").removeClass("active");
+      $(".tab-menu-wp ul li:eq("+index+")").addClass("active");
+        $(".page1:eq("+index+")").fadeIn();
+    });
+  });
+</script>
