--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -18,6 +18,7 @@
         <%= f.input :gg_from, label: 'Seller', placeholder: 'Seller' %>
         <%= f.input :gg_spare_01, label: 'Retailer', placeholder: 'Retailer' %>
         <%= f.input :gg_intro, label: 'Intro', placeholder: 'Intro' %>
+        <div class="with_trix"><%= f.input :gg_pro_01, as: :trix_editor, label: 'with trix', placeholder: 'with trix' %></div>
         <%= f.input :gg_option_04, label: 'Keywords', placeholder: 'Keywords' %>
         <%= f.input :gg_aprice, label: 'Current Price', placeholder: 'Current Price' %>
         <%= f.input :gg_option_02, label: 'Discover More', placeholder: 'Discover More' %>
