--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -56,7 +56,11 @@
               <% end %>
              </span> 
             <% end %>
-            <em>*Pricing may change and deals can expire fast.</em>
+            <em>* Pricing may change and deals can expire fast.</em>
+            <% saving_total = 0 %>
+            <% saving_total =  @promocode.p_spare_26 - (@promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26) %>
+            <em>* You can save <%= number_to_currency(saving_total) %></em>
+
             <em>+ FREE Shipping ( Free Shipping: <a class="prime" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em>
 
             <% if @promocode.p_spare_05.present? %>
