--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -109,6 +109,8 @@
 .gadget_form{margin-top:250px;}
 .form_border{width:70%;margin:0 auto;}
 .form_border input, .form_border textarea{width:100%;height:40px;margin-bottom:20px;}
+.form_border textarea{height:100px;}
+.form_border trix-editor{min-height:15em;margin-bottom:20px;}
 .form_border .form_select{margin-bottom:20px;}
 .form_border .form_btn{width:40%;}
 
@@ -132,6 +134,7 @@
 .show_wrap .show_box .show_inner p{margin:25px 0;font-size:20px;}
 .show_wrap .show_box .show_inner a{text-decoration:none;color:#fff;background:#000;padding:15px 30px;display:inline-block;}
 .show_wrap .show_box .show_inner a em{color:#e47911;text-transform:uppercase;}
+.show_wrap .show_box .show_inner .trix{display:block;margin-top:20px;}
 .show_wrap .show_box .show_inner .keyword{display:none;}
 
 .show_wrap .show_box_down{width:1000px;margin:60px auto 200px auto;}
