--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -15,13 +15,15 @@
     <%= f.input :h_keyword, label: ' gadgets, amazon, recommended, under $ ' %>
     <%= f.input :h_spare_05, label: 'Hashtags' %>
     <div class="pricing clearfix">
-      <%= f.input :h_list_price, label: 'List Price' %>
-      <%= f.input :h_price, label: 'Current Price' %>
+      <%= f.input :h_spare_41, label: 'Original Price' %>
+      <%= f.input :h_spare_42, label: 'Current Price' %>
       <%= f.input :h_percentage, label: 'Discount Percentage' %>
       <%= f.input :h_spare_08, label: 'Average Rate' %>
       <%= f.input :h_spare_09, label: 'Number of Reviews' %>
       <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
       <%= f.input :h_spare_01, label: 'Extra Deals?' %>
+      <%= f.input :h_list_price, label: '(Old)List Price' %>
+      <%= f.input :h_price, label: '(Old)Current Price' %>
     </div>
     <%= f.input :h_description, label: 'Description Of Product' %>
     <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
