--- a/app/assets/stylesheets/most_reviews.css
+++ b/app/assets/stylesheets/most_reviews.css
@@ -49,7 +49,7 @@ blockquote {font-family:'Oswald', sans-serif;line-height:1.2em;font-size:1.8em;c
 .tab-menu-wp ul{list-style:none;padding:0;margin:0;}
 .clear{clear:both}
 .tab-menu-wp ul li{cursor:pointer;width:50%;text-align:center;display:block;color:#000;float:left;font-size:13px;padding-bottom:10px;}
-.st_middle .active{border-bottom:3px solid #3498db;color:#08f!important}
+.active{border-bottom:3px solid #3498db;color:#08f;}
 .tab-menu-text{width:100%;margin-top:10px;cursor:pointer;padding:3px 5px;transition:400ms all;}
 /*.tab-menu-text:hover{background:rgba(0,0,0,.4);}*/
 .tab-menu-img img{width:50px;height:50px;overflow:hidden;float:left;/*border-radius:100%;*/}
