--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -15,14 +15,16 @@
         <%= f.input :gg_url, label: 'Product URL', placeholder: 'Product URL' %>
         <%= f.input :gg_title, label: 'Title', placeholder: 'Title' %>
         <%= f.input :gg_spare_05, label: 'Image_title', placeholder: 'Image_title' %>
-        <%= f.input :gg_from, label: 'Seller', placeholder: 'Seller' %>
-        <%= f.input :gg_spare_01, label: 'Retailer', placeholder: 'Retailer' %>
-        <%= f.input :gg_intro, label: 'Intro', placeholder: 'Intro' %>
-        <div class="with_trix"><%= f.input :gg_pro_01, as: :trix_editor, label: 'with trix', placeholder: 'with trix' %></div>
+        <div class="gg_input clearfix">
+          <%= f.input :gg_from, label: 'Seller', placeholder: 'Seller' %>
+          <%= f.input :gg_spare_01, label: 'Retailer', placeholder: 'Retailer' %>
+          <%= f.input :gg_aprice, label: 'Current Price', placeholder: 'Current Price' %>
+        </div>
         <%= f.input :gg_option_04, label: 'Keywords', placeholder: 'Keywords' %>
-        <%= f.input :gg_aprice, label: 'Current Price', placeholder: 'Current Price' %>
         <%= f.input :gg_option_02, label: 'Discover More', placeholder: 'Discover More' %>
         <%= f.input :gg_youtube01, label: 'Youtube First', placeholder: 'Youtube' %>
+        <%= f.input :gg_intro, label: 'Intro', placeholder: 'Intro' %>
+        <div class="with_trix"><%= f.input :gg_pro_01, as: :trix_editor, label: 'with trix', placeholder: 'with trix' %></div>
        </div>
           
        <div class="form_btn">
