--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -12,10 +12,16 @@
               <button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button>
             </div>
           <% end %>
+          <% if can? :update, @gadget %>
+          <div class="btn clearfix admin">
+            <em><%= link_to "Edit", edit_gadget_path(@gadget) %></em><%= link_to "Delete", gadget_path(@gadget), method: :delete, data: {confirm: "Are you sure?"}%>
+          </div>   
+        <% end %>
         </div>
         <div class="show_inner">
          <h2><a target="_blank" href="<%= @gadget.gg_url %>"><%= @gadget.gg_title %></a></h2>
          <strong>BY <%= @gadget.gg_from %></strong>
+         <p><%= number_to_currency(@gadget.gg_aprice) %></p>
          <% if @gadget.gg_intro.present? %>
            <span><p><%= @gadget.gg_intro %></p></span>
          <% end %>
@@ -27,7 +33,6 @@
          <% if @gadget.gg_option_03.present? %>
           <a class="m_btn" target="_blank" href="<%= @gadget.gg_url %>">Learn More on <em><%= @gadget.gg_spare_01 %></em></a>
          <% else %>
-          <p>$<%= @gadget.gg_aprice %></p>
           <a class="m_btn" target="_blank" href="<%= @gadget.gg_url %>">Check it out on <em><%= @gadget.gg_spare_01 %></em></a>
          <% end %>
             
