--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -135,12 +135,13 @@
 .show_wrap .show_box .show_inner span{}
 .show_wrap .show_box .show_inner span p{font-size:15px;font-weight:100;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
 .show_wrap .show_box .show_inner p{margin:25px 0;font-size:25px;}
-.show_wrap .show_box .show_inner a{text-decoration:none;color:#fff;background:#000;padding:15px 30px;display:inline-block;}
+.show_wrap .show_box .show_inner a{text-decoration:none;color:#fff;background:#000;padding:15px 30px;display:inline-block;margin-top:30px;}
 .show_wrap .show_box .show_inner a em{color:#e47911;text-transform:uppercase;}
 .show_wrap .show_box .show_inner .trix{display:block;margin-top:20px;}
 .show_wrap .show_box .show_inner .trix ul{margin-left:20px;}
 .show_wrap .show_box .show_inner .trix ul li{list-style:disc;}
 .show_wrap .show_box .show_inner .keyword{display:none;}
+.show_wrap .show_box .show_inner .about{font-size:20px;border-bottom:1px solid #ccc;display:block;}
 
 .show_wrap .show_box_down{width:1000px;margin:60px auto 200px auto;}
 .show_wrap .show_box_down h2{margin:0 0 1% 1%;border-bottom:1px solid #616161;width:200px;}
