--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -75,7 +75,8 @@
             </div>
 
             <%if @hotdeal.h_spare_21.present? %>
-              <div class="trix"><p><%= @hotdeal.h_spare_21.html_safe %></p></div>
+
+              <div class="trix"><span>Features</span><p><%= @hotdeal.h_spare_21.html_safe %></p></div>
             <% else %>
               <% if @hotdeal.h_description.present? %>
                 <div class="show_des"><p class="description"><%= @hotdeal.h_description %></p></div>
