--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -21,7 +21,10 @@
         <div class="show_inner">
          <h2><a target="_blank" href="<%= @gadget.gg_url %>"><%= @gadget.gg_title %></a></h2>
          <strong>BY <%= @gadget.gg_from %></strong>
-         <p><%= number_to_currency(@gadget.gg_aprice) %></p>
+         <% if @gadget.gg_option_03.present? %>
+         <% else %>
+          <p><%= number_to_currency(@gadget.gg_aprice) %></p>
+         <% end %>
 
          <em class="about">About This</em>
          <% if @gadget.gg_intro.present? %>
