--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -13,6 +13,8 @@
             </div>
           <% end %>
           <% if can? :update, @gadget %>
+          <h3>Admin Management</h3>
+          <p><%= @gadget.gg_title %></p>
           <div class="btn clearfix admin">
             <em><%= link_to "Edit", edit_gadget_path(@gadget) %></em><%= link_to "Delete", gadget_path(@gadget), method: :delete, data: {confirm: "Are you sure?"}%>
           </div>   
