--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -59,7 +59,7 @@
             <em>* Pricing may change and deals can expire fast.</em>
             <% saving_total = 0 %>
             <% saving_total =  @promocode.p_spare_26 - (@promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26) %>
-            <em>* You can save <%= number_to_currency(saving_total) %></em>
+            <em>* You can save <%= number_to_currency(saving_total) %> or more.</em>
 
             <em>+ FREE Shipping ( Free Shipping: <a class="prime" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em>
 
