--- a/app/views/deals/_body_hotdeals.html.erb
+++ b/app/views/deals/_body_hotdeals.html.erb
@@ -29,7 +29,7 @@
        <div class="m_tooltip_common m_tooltip_orange"><span> + <%= hotdeal.h_spare_01 %> off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
      <% end %>
 
-     <em>*Pricing may change and deals can expire fast. <%= link_to 'More Detail', hotdeal %></em>
+     <em>*Pricing may change and deals can expire fast.</em>
      <% if can? :update, @hotdeals %>
        <div class="admin clearfix">
         <ul>
