--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -48,9 +48,9 @@
               <% if @promocode.p_spare_01.present? %>
                 <div class="primeornot"><%= @promocode.p_spare_01 %> |</div>
               <% else %>
-                PRIME |
+                <!-- PRIME | -->
               <% end %>
-                Avg <%= @promocode.p_spare_03 %> / <%= number_with_delimiter(@promocode.p_spare_04) %>+ reviews 
+                Avg <%= @promocode.p_spare_03 %> | <%= number_with_delimiter(@promocode.p_spare_04) %>+ reviews 
               <% if @promocode.p_spare_02.present? %>
                 | <%= @promocode.p_spare_02 %> 
               <% end %>
